--- a/simpletextrotator.css
+++ b/simpletextrotator.css
@@ -1,5 +1,6 @@
 .rotating {
   display: inline-block;
+  white-space: nowrap;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
